# umba-md-pp

./: .gitignore  .gitmodules  .md-pp.options  .set_sln.bat  .set_sln_exes.bat.template  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.md_  README_bak.md  _precommit.bat  _precommit_wlog.bat  _start_code.bat  _start_msvc2019_x64.bat  _start_msvc2019_x86.bat  _start_msvc2022_x64.bat  _start_msvc2022_x86.bat  _start_umba-md-pp-msvc2019.bat  _update_debug_conf.bat  _update_libs_modules_from_remote.bat  _update_modules_from_remote.bat  clean-help.bat  copy_distr_conf_to_out.bat  deploy.bat  deploy_local.bat  gen-doc.bat  generate_README.bat  generate_docs.bat  make-lang-detection-tr.bat  make_translations.bat  mk-help-doc.bat  mk-help.bat  pages.md  set_sln_exes.bat  translations.rsp  umba-brief-scanner.rsp  umba-md-pp-msvc2019.sln  umba-md-pp-view-console-test.bat  update_md-pp-view-conf-options.bat  (+1 more)
.bat/: setup_out_pp_root_paths.bat
.bat_prev/: find-exe-in-out.bat  find-gen-lang-detection-tr.bat  setup_out_pp_root_paths.bat
.cmake/: umba.cmake
.msvc/: umba_3dp_boost.props
.msvc2019/: gen-lang-detection-tr.vcxproj  readme.txt  umba-md-pp-view-console.vcxproj  umba-md-pp-view.vcxproj  umba-md-pp.vcxproj  umba_prjdirs.props
_distr_conf/conf/: umba-md-pp-view-console.options  umba-md-pp-view.options  umba-md-pp.options
_libs/: .gitignore  _clone_libs.bat  _git-job-impl.bat  libs.list
_prj_cmake/: CMakeLists.txt  CMakePresets.json
_prj_msvc/: gen-lang-detection-tr.vcxproj  readme.txt  umba-md-pp-view-console.vcxproj  umba-md-pp-view.vcxproj  umba-md-pp.vcxproj
_src/simple-drawing/: check-points.h  css_style.h  smpd-test-001.cpp  smpd-tokenizer.h  smpd-tokens.h  utils.h
_src/umba-md-pp/: _umba-md-pp-view.rc  app_config.h  arg_list_options.h  arg_parser.h  code-options-database.h  csv_table_options.h  document.h  enum_hash.h  enums.h  extern_tools.h  for_tag_test.cpp  gen-lang-detection-tr.cpp  generation_cache_info.h  graph_viz_options.h  image_helpers.h  language-options-database.h  md-pp-macro_helpers.h  md_pp_html.h  md_pp_html_arg_list.h  md_pp_html_csv.h  md_pp_html_graph.h  md_pp_html_puml.h  md_pp_tag_utils.h  md_pp_tags.h  md_pp_tags_inner_comments.h  plantuml_options.h  processing.h  processing_code_utils.h  processing_includes.h  processing_section_utils.h  processing_utils.h  rtf_workarounds.h  signature.h  signature_types.h  snippet_options.h  test_rtf_workarounds.cpp  tests_bak.cpp  umba-md-pp-view.cpp  umba-md-pp.cpp  umba_md_processing_utils.h  (+3 more)
conf/: umba-md-pp-view-console.options  umba-md-pp.options
doc/: .gitignore  Index.md  _sources_brief.html  _sources_brief.md  _sources_brief.md_  _sources_brief.txt  bred.txt  dot.txt  known-bugs.md  links.txt  md.txt  pages_index.md  rtf.txt  table-test.md  table-test.md_  todo.md  todo.md_  todo.txt  trie.bat  trie.dot  trie_brackets.dot  trie_flat.dot  trie_flat2.dot  umba-md-pp-cli-options.md  umba-md-pp-cli-options.md_  umba-md-pp-help.md  umba-md-pp-help.md_  umba-md-pp-options.md  umba-md-pp-options.md_  umba-md-pp-version-info.txt  umba-md-pp-view-cli-options.md  umba-md-pp-view-cli-options.md_  umba-md-pp-view-console-cli-options.md  umba-md-pp-view-console-cli-options.md_  Исходные тексты.md  Списки замечаний в исходном коде.md
doc.drafts/: _sources_brief.md  _sources_brief.md_  boost.txt  bred.txt  csv.txt  dot.txt  fsm.txt  github.txt  jekyll.txt  links.txt  md-tables.txt  operartors.txt  pages_index.md  plant_uml.txt  proto-test.md  proto-test.md_  resource_links.txt  rtf.txt  table-test.md  table-test.md_  todo.md  todo.md_  trie_numbers.dot  trie_operators.dot  umba-md-pp-view-console-todo.bat  wsl.txt  yaml-meta.txt
doc.drafts/boost/: b2.txt  build_b2.bat  clr_build.bat  cmake.txt  links.txt  make_boost_wlog.bat  user-config.jam
doc.drafts/git-add/: git-add-2.bat  git-add.bat
doc.drafts/graphviz/: test001.dot  test006.dot  trie.dot  trie_flat.dot
doc.drafts/plantuml/: 03-ditaa-02a.puml  04-ditaa-02b.puml  05-ditaa-02c.puml  06-ditaa-03.puml  07-JCCKit-01.puml  08-JCCKit-02.puml  09-JCCKit-03.puml  10-JCCKit-04.puml  11-JCCKit-05.puml  13-bnf-02.puml  14-bnf-03.puml  15-bnf-04.puml  16-bnf-05.puml  17-bnf-06.puml  18-bnf-07.puml  19-bnf-08.puml  20-bnf-09.puml  21-bnf-10.puml  23-bnf-12.puml  24-bnf-13.puml  25-bnf-14.puml  26-bnf-15.puml  27-bnf-16.puml  28-bnf-17.puml  29-bnf-18.puml  30-bnf-19.puml  31-bnf-20.puml  33-bnf-22.puml  34-bnf-23.puml  35-bnf-24.puml  36-state-01.puml  39-state-04.puml  44-state-09.puml  45-state-10.puml  48-state-13.puml  49-state-14.puml  51-state-16.puml  54-state-19.puml  56-state-21.puml  59-state-24.puml  (+8 more)
doc.drafts/table-test/: table-test-04.txt
doc/_md/: _found-attentions.md  _found-notes.md  _found-see-also.md  _found-todos.md  _found-undones.md  _found-warnings.md  entry_points.md_  sources-stat-by-percent.md_  sources-stat-by-percent.txt  sources-stat.md_  sources-stat.txt  sources_brief.md_
doc/boost/: b2_help.bat  build_bootsrap.bat  generators.txt  make_boost.bat  make_boost_b2.bat  make_boost_impl.bat
doc/dot/: test001.bat  test002.bat  test002.dot  test003.bat  test004.dot  test005.bat  test006.bat  test007.dot
doc/md_/: special-vars.md_
doc/rtf-smp/: podgnss.rtf  tzdgnss.rtf  ud.7z
doc/table-test/: table-test-02.txt  table-test-03.txt  table-test-05.txt
src/: dn_doc_gen.cpp
src/tmp/: addCommonStringsEn.h  addCommonStringsRu.h  cppHelpers.h  dn_doc_gen.cpp  dn_doc_gen_app_config.h  enums.h  tr.txt  (+4 more)
tests/: .gitignore  README.md_  README.rtf  _run_all_tests.bat  _run_all_tests_wlog.bat  _set_cmn_opts_sample.bat  _set_pp_sample.bat  _setup.bat  alice-bob.puml  block_quote_test.md  by_macro1.md_  by_macro2.md_  gen-lang-detection-tr.bat  generated_toc_sample.md  ndfl.md_  set_cmn_opts_sample.bat  set_pp_sample.bat  test.lst  test01.bat  test01.markdown  test01.md  test01.md_  test01_wlog.bat  test02.bat  test02.md  test02.md_  test02_wlog.bat  test03.bat  test03.md  test03.md_  test03_wlog.bat  test04.bat  test04.md  test04.md_  test04_wlog.bat  test04d.md  test05.bat  test05.md  test05_wlog.bat  test06.bat  (+4 more)
(+318 files in other folders)
